@@ -2,6 +2,10 @@ debhelper (13.2.1) UNRELEASED; urgency=medium
 
   [ Niels Thykier ]
   * debian/changelog: Fix some typos in previous entries.
+  * Dh_Lib.pm,Dh_Buildsystems.pm: Properly clear buildflags with
+    --reload-all-buildenv-variables is passed.  Thanks to
+    Harald Welte and Guillem Jover for reporting and debugging
+    the issue.  (Closes: #966689)
 
   [ Peter Pentchev ]
   * dh_installalternatives: Correct order of values in the example for
